--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -4,8 +4,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 3.125rem;
-  margin: 0px;
+  gap: 2rem;
+  /* */
   padding: 5.625rem 6.25rem;
 }
 
@@ -15,66 +15,79 @@
   font-size: 1.563rem;
 }
 
-.button {
-  text-decoration: none;
-  display: inline-block;
-  padding: 0.75rem 1.5rem;
-  border: 0.063rem solid #4f4f4f;
-  border-radius: 0.25rem;
-  transition: all 0.2s ease-in;
-  position: relative;
-  overflow: hidden;
-  font-size: 1.188rem;
+.contact-container .contact_form{
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+}
+.input_container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.email_from, .message_box{
+  border-radius: 0.3rem;
+  padding: 0.5rem 0.7rem;
+  border-style: none;
+  border: 0.01rem solid rgb(39, 39, 39);
+}
+
+.btn41-43 {
+  padding: 10px 25px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  background: rgb(255, 255, 255);
+  outline: none !important;
   cursor: pointer;
-  color: black;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+}
+
+.btn-43 {
+  border: 0.01rem solid rgb(39,39,39);
   z-index: 1;
+  color: rgb(0, 0, 0);
 }
 
-.button:before {
-  content: "";
+.btn-43:after {
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%) scaleY(1) scaleX(1.25);
-  top: 100%;
-  width: 140%;
-  height: 180%;
-  background-color: rgba(0, 0, 0, 0.05);
-  border-radius: 50%;
-  display: block;
-  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
-  z-index: -1;
-}
-
-.button:after {
   content: "";
-  position: absolute;
-  left: 55%;
-  transform: translateX(-50%) scaleY(1) scaleX(1.45);
-  top: 180%;
-  width: 160%;
-  height: 190%;
-  background-color: #000000;
-  border-radius: 50%;
-  display: block;
-  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  width: 100%;
+  height: 0;
+  top: 0;
+  left: 0;
   z-index: -1;
+  background: rgb(0, 0, 0);
+  transition: all 0.3s ease;
 }
 
-.button:hover {
-  color: #ffffff;
-  border: 0.063rem solid #000000;
+.btn-43:hover {
+  color: rgb(255, 255, 255);
 }
 
-.button:hover:before {
-  top: -35%;
-  background-color: #000000;
-  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+.btn-43:hover:after {
+  top: auto;
+  bottom: 0;
+  height: 100%;
 }
 
-.button:hover:after {
-  top: -45%;
-  background-color: #000000;
-  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+@media (max-width: 990px){
+  .contact-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+    margin: 0px;
+    padding: 5.625rem 3.5rem;
+  }
+  .contact-container .contact_form{
+    width: 49%;
+  }
 }
 
 @media (max-width: 780px){
@@ -83,9 +96,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 3.125rem;
+    gap: 1.2rem;
     margin: 0px;
-    padding: 5.625rem 5rem;
+    padding: 5.625rem 3rem;
+  }
+
+  .contact-container .contact_form{
+    width: 55%;
   }
   
   .contact-container p {
@@ -100,13 +117,30 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 3.125rem;
+    gap: 3rem;
     margin: 0px;
-    padding: 5.625rem 1rem;
+    padding: 5.625rem 0rem;
+  }
+
+  .contact-container .contact_form{
+    width: 60%;
   }
   .contact-container p {
     text-align: center;
-    padding: 1rem 1.5rem;
-    font-size: 1.2rem;
+    padding: 1rem 2rem;
+    font-size: 1rem;
+  }
+}
+@media (max-width: 550px){
+  .contact-container{
+    gap: 2rem;
+  }
+  .contact-container .contact_form{
+    width: 80%; 
+  }
+  .contact-container p {
+    text-align: center;
+    padding: 1rem 2rem;
+    font-size: 1rem;
   }
 }
