--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,66 +1,58 @@
 .projects-container {
-  padding: 5.625rem 6.25rem;
+  padding: 5.625rem 6.625rem;
   background-color: whitesmoke;
   display: flex;
   flex-direction: column;
   gap: 4rem;
 }
 
+.projects-container .container {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  justify-content: space-around;
+}
+
 .project-card {
-  display: flex; 
-  align-items: center; 
-  margin-bottom: 1.25rem; 
-  border-radius: 0.5rem; 
-  overflow: hidden; 
+  width: 33%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+  border-radius: 1rem;
+  padding: 1rem 0rem;
+  background-color: rgba(0, 0, 0, 0.852);
+  transition: 0.3s ease-in-out;
 }
 
-.project-card.left {
-  flex-direction: row; 
-}
-
-.project-card.right {
-  flex-direction: row-reverse; 
+.project-card:hover {
+  background-color: rgb(0, 0, 0);
+  transform: translateY(-5px);
+  box-shadow: 0rem 5px 0rem rgb(46, 46, 46);
 }
 
 .project-image {
-  width: 43.75rem; 
-  height: auto; 
-  filter: grayscale(100%);
-  transition: filter 0.3s ease; 
+  border-radius: 1rem;
+  width: 90%;
+  height: 50%;
+  transition: filter 0.3s ease;
 }
 
 .project-image:hover {
-  filter: grayscale(0%); 
+  filter: grayscale(0%);
 }
 
 .project-description {
-  background-color: rgba(0, 0, 0, 0.878); 
-  color: rgb(255, 255, 255); 
-  border-radius: 5px;
-  box-shadow: 0rem 0.125rem 0.625rem rgba(0, 0, 0, 0.647);
-  width: calc(60% - 6.25rem);
-  padding: 3rem 3rem; 
+  color: rgb(255, 255, 255);
+  width: 90%;
+  height: 50%;
+  padding: 1rem 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   transition: 0.3s ease;
-  
-}
-
-.project-description:hover {
-  background-color: rgb(235, 235, 235); 
-  color: rgb(0, 0, 0);
-}
-
-.project-description.left {
-  position: absolute;
-  right: 35%;
-}
-
-.project-description.right {
-  position: absolute;
-  left: 35%;
 }
 
 .project-description p {
@@ -74,99 +66,113 @@
     display: flex;
     flex-direction: column;
     gap: 4rem;
-
   }
-
+  .projects-container .container {
+    display: flex;
+    flex-direction: column;
+  }
+  .project-card {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 0;
+    width: 100%;
+  }
+  .project-card:hover {
+    background-color: rgb(0, 0, 0);
+    transform: translateX(-10px) translateY(-10px);
+    box-shadow: 10px 10px 0rem rgb(74, 74, 74);
+  }
   .project-image {
-    width: 40rem;
+    width: 50%;
   }
-
   .project-description {
-    width: calc(60% - 6.5rem);
+    width: 47%;
+    padding: 0rem 2rem;
   }
-
-  .project-description.left {
-    position: absolute;
-    right: 38%;
+  .project-description h3 {
+    font-size: 1.5rem;
   }
-
-  .project-description.right {
-    position: absolute;
-    left: 38%;
+  .project-description p {
+    font-size: 0.95rem;
   }
 }
 
 @media (max-width: 990px) {
   .projects-container {
-    padding: 5.625rem 3rem;
+    /* padding: 5.625rem 3rem; */
   }
-  .project-image{
-    width: 30rem;
-  }
-  .project-description {
-    padding: 1rem 2rem;
-    width: calc(65% - 5rem);
-  }
-  .project-description h3{
+  .project-description h3 {
     font-size: 1.5rem;
   }
 }
 
+@media (max-width: 770px) {
+  .project-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
+  }
+  .project-image {
+    width: 90%;
+  }
+  .project-description {
+    width: 90%;
+    padding: 0rem 2rem;
+  }
+  .project-description h3 {
+    font-size: 2rem;
+  }
+  .project-description p {
+    font-size: 1.1rem;
+  }
+}
+
 @media (max-width: 680px) {
-    .projects-container{
-        padding: 5.625rem 2rem;
-    }
-    .project-card{
-        padding: 0rem 3rem;
-        width: 100%;
-    }
-    .project-image{
-        width: 30rem;
-    }
-    .project-description{
-        background-color: rgba(0, 0, 0, 0.768);
-        padding: 2rem 2.5rem;
-        width: 30rem;
-    }
-    .project-description.left{
-        right: 0%;
-        margin-right: 3rem;
-    }
-    .project-description.right{
-        left: 0%;
-        margin-left: 3rem;
-    }
+  .projects-container {
+    padding: 5.625rem 2rem;
+  }
 }
 
 @media (max-width: 580px) {
-    .project-card{
-        padding: 0rem 0rem;
-        width: 100%;
-        background-color: blueviolet;
-    }
-    .project-card.left,.project-card.right{
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-    }
-    .project-image{
-        width: 30rem;
-    }
-    .project-description{
-        background-color: rgba(0, 0, 0, 0.768);
-        padding: 2rem 2.5rem;
-        width: 30rem;
-    }
-    .project-description.left, .project-description.right{
-        margin: 0;
-    }
+  .projects-container {
+    padding: 5rem 1rem;
+  }
+  .projects-container .container {
+    align-items: center;
+  }
+  .project-card {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .project-image {
+    width: 90%;
+  }
+  .project-description {
+    padding: 2rem 2rem;
+    width: 30rem;
+  }
+  .project-description {
+    margin: 0;
+  }
 }
-@media (max-width: 530px){
-    .project-image{
-        width: 100%;
-    }
-    .project-description.left, .project-description.right{
-        width: 100%;
-        margin: 0;
-    }
+@media (max-width: 500px) {
+  .project-card {
+    gap: 1rem;
+  }
+  .project-description {
+    padding: 2rem 2rem;
+    width: 100%;
+  }
+  .project-description {
+    margin: 0;
+  }
+  .project-description h3 {
+    font-size: 1.5rem;
+  }
+  .project-description p {
+    font-size: 1rem;
+  }
 }
